--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Directories
 venv/
 .vscode/
@@ -8,5 +32,6 @@ __pycache__/
 **/*.todo
 **/mpmignore_*
 **/*.xlsx
-.env
+**/.env
+**/.env.*
 **/*.db
