--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "simplebar": "^5.3.0"
+    "simplebar-react": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
