--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
