Prelaunch: Craft Page (#1)
* Add dynamic colors to recipe cards

- update ETL to change json keys to be lowercase
- add NaN support to ETL by forcing "NaN" string
- create diyrecipe-COLOR classes to correspond to colors.json

* Add button to remove MenuItems

* Remove potential duplicates in Nookipedia API results

* Correct dotenv for ETL installation

* Correct base-filtering logic and add 'exact match' filter flag

* Install (NOT implement) SimpleBar

* Tailwind: Start Navbar

* Complete Header Tailwind conversion

* CraftPage: Mobile temp unavailable complete

* Convert CraftPage.Recipes to Tailwind

* Add HD breakpoint for navbar

* Correct row column spacing issue on filter

* Add brown colors to theme

* hard set width of recipes

* convert CraftPage.Menu to Tailwind

* Add loading animation while fetching API data

* add Tooltip to CraftPage

* Disable PLAN for launch

* Add ItemFocus view

* Add fishing as source of DIY

* correct darkest brown to be yellow instead of red

* add simplebar to recipes -- unstyled & not overloading page bar

* Finish SimpleBar integration

--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
+    "@tippyjs/react": "^4.2.5",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "simplebar": "^5.3.0"
+    "simplebar-react": "^2.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
