--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.1"
