--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@tippyjs/react": "^4.2.6",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "simplebar-react": "^2.4.1"
+    "simplebar-react": "^2.4.1",
+    "source-map-loader": "^4.0.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
