Add husky and prettier to enforce clean/readable styling

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "serve": "serve -s build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "format": "pretty-quick"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.0",
+    "pretty-quick": "^3.1.3"
   }
 }
