Convert SpeechBubble component and About page to Typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "baseUrl": "src",
         "outDir": "./build",
-        "target": "es5"
+        "target": "es5",
+        "jsx": "react-jsx",
+        "noImplicitAny": true,
+        "resolveJsonModule": true
     },
     "include": ["./src/**/*"]
 }
