--- a/package.json
+++ b/package.json
@@ -1,36 +1,53 @@
 {
-  "name": "nookdiy.me",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@headlessui/react": "^1.6.5",
-    "@tippyjs/react": "^4.2.6",
-    "axios": "^0.27.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "simplebar-react": "^2.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "serve": "serve -s build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "nookdiy.me",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@headlessui/react": "^1.6.5",
+        "@heroicons/react": "^2.0.10",
+        "@tippyjs/react": "^4.2.6",
+        "@types/jest": "^28.1.4",
+        "@types/node": "^18.0.3",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@types/react-router-dom": "^5.3.3",
+        "axios": "^0.27.2",
+        "prettier": "^2.7.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^5.0.1",
+        "simplebar-react": "^2.4.1",
+        "source-map-loader": "^4.0.0",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "serve": "serve -s build",
+        "eject": "react-scripts eject",
+        "prepare": "husky install",
+        "format": "pretty-quick"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^8.5.0",
+        "husky": "^8.0.0",
+        "pretty-quick": "^3.1.3"
+    }
 }
